--- a/app/src/main/res/layout/fragment_adress_search.xml
+++ b/app/src/main/res/layout/fragment_adress_search.xml
@@ -63,13 +63,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="취소"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:stateListAnimator="@null" />
         <Button
             android:id="@+id/confirm"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="확인"
             android:layout_weight="1"
+            android:shadowRadius="0"
+            android:stateListAnimator="@null"
             style="@style/Widget.AppCompat.Button.Colored"/>
     </LinearLayout>
 
