--- a/app/src/main/res/layout/custom_marker.xml
+++ b/app/src/main/res/layout/custom_marker.xml
@@ -9,7 +9,7 @@
         <!--android:src="@drawable/ic_cast_dark" />-->
 
     <ImageView
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/marker_background"
         android:src="@drawable/find_ps_marker"
@@ -23,7 +23,7 @@
         android:gravity="center"
         android:text="1120원"
         android:background="@color/icons"
-        android:textSize="12dp"
+        android:textSize="10dp"
         android:textStyle="bold" />
 
 </RelativeLayout>
