--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="third_background">#dedede</color>
     <color name="sub_text">#359bd9</color>
 
+    <color name="floatingButton">#636363</color>
+
 
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#616161</color>
