--- a/app/src/main/res/drawable/rectangle_border.xml
+++ b/app/src/main/res/drawable/rectangle_border.xml
@@ -11,10 +11,10 @@
 
             <!-- If you want to add some padding -->
             <padding
-                android:left="4dp"
-                android:top="4dp"
-                android:right="4dp"
-                android:bottom="4dp"    >
+                android:left="@dimen/rectangle_border_padding"
+                android:top="@dimen/rectangle_border_padding"
+                android:right="@dimen/rectangle_border_padding"
+                android:bottom="@dimen/rectangle_border_padding"    >
             </padding>
 
             <!-- Here is the corner radius -->
