--- a/app/src/main/res/layout/custom_marker.xml
+++ b/app/src/main/res/layout/custom_marker.xml
@@ -9,10 +9,10 @@
         <!--android:src="@drawable/ic_cast_dark" />-->
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:id="@+id/marker_background"
-        android:src="@drawable/find_ps_marker"
+        android:src="@drawable/marker_background"
         android:adjustViewBounds="true" />
 
     <TextView
@@ -23,7 +23,7 @@
         android:gravity="center"
         android:text="1120원"
         android:background="@color/icons"
-        android:textSize="10dp"
+        android:textSize="12dp"
         android:textStyle="bold" />
 
 </RelativeLayout>
