--- a/app/src/main/res/layout/gas_station_row.xml
+++ b/app/src/main/res/layout/gas_station_row.xml
@@ -115,6 +115,7 @@
                 android:text="예약하기"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:textSize="16dp"
+                android:layout_gravity="center"
                 android:background="@color/colorPrimary" />
         </LinearLayout>
 
